[package]
name = "alfred-crates"
version = "1.0.3-alpha.0"
authors = ["François-Guillaume Ribreau <rust@fgribreau.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Workflow for searching Rust crates from Alfred."

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/alfred-crates"
homepage = "https://github.com/FGRibreau/alfred-crates"
repository = "https://github.com/FGRibreau/alfred-crates"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["cargo", "crates", "alfred", "mac"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["development-tools"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

include = ["src/main.rs", "Cargo.toml", "info.plist", "info.png"]


[dependencies]
crates-io = "0.24"
curl = "0.4.22"
alfred = "4.0.1"


[dependencies.clap]
version = "2.20.0"
default-features = false
